--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">ToDoApp</string>
-    <string name="add">Add</string>
+    <string name="app_name">To Do List App</string>
 </resources>
